# legolord208.github.io

./: .gitignore  404.html  CNAME  Gemfile  _config.yml  _headers  args.html  bubble.html  build.sh  chess.css  chess.html  chess.js  contact.html  design.html  editor.css  editor.html  editor.js  fun-with-bash.html  game.html  history.html  index.css  index.html  index.js  index.md  libs.html  lolcode.css  lolcode.html  lolcode.js  mcmini.html  mode-lolcode.js  overflow.html  software.html  table.html  tir.html  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm  wasm_helper.js  webby.html
_data/: software.yml
_layouts/: default.html
_site/: 404.html  args.html  bubble.html  contact.html  design.html  feed.xml  game.html  history.html  index.html  libs.html  mcmini.html  robots.txt  software.html  table.html  tir.html  webby.html
_site/assets/css/: libstyle.css
_site/files/: TIR.json  tir-titles.json
assets/css/: contact.css  libs.css  libstyle.css  main.css  software.css  tir.css
assets/js/: index.js  main.js  software.js  tir.js
crappy-chess-minimax-wasm/: Cargo.toml
crappy-chess-minimax-wasm/src/: lib.rs
files/: FolderSync.json  OptiFine Updater.json  TIR  TIR.json  TIR32
insult-wasm/: Cargo.toml
insult-wasm/src/: endings  lib.rs  nouns
lolcode-wasm/: Cargo.toml
lolcode-wasm/src/: lib.rs
termplay-wasm/: Cargo.toml
termplay-wasm/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  wasm_chess_minimax.rs  wasm_crappy_chess_minimax.rs  wasm_insult.rs  wasm_lci.rs  wasm_nix.rs  wasm_termplay.rs
wasm/src/insult/: verbs
(+1 files in other folders)
