[package]
authors = ["jD91mZM2 <me@krake.one>"]
name = "wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
image = "0.19.0"
insult = "2.0.3"
js-sys = "0.2.6"
lci = "0.1.8"
rand_core = "0.2.1"
rnix = "0.4.1"
wasm-bindgen = "0.2.21"

[dependencies.chess-minimax]
git = "https://gitlab.com/jD91mZM2/chess-minimax"
branch = "rewrite"
features = ["terminal"]

[dependencies.termplay]
default-features = false
version = "2.0.5"

[lib]
crate-type = ["cdylib"]
